# ClipSelect2

./: .dockerignore  .gitignore  Dockerfile.cliper  Dockerfile.front  docker-compose.yml
cliper/: backend_runner.sh  pyproject.toml
cliper/alembic/: env.py
cliper/alembic/versions/: 0ed644dace18_make_relations_not_nullable.py  1b8a7ec79dad_add_order_to_subseries.py  4d98b82d53c0_initial_revision.py  5b5e1881c0ae_change_relations.py  81d1de28179f_add_stream_index_column.py  981c389b1236_add_posters.py  e82fc0244921_add_order_to_subseries.py  eeba81b893e3_make_relations_cascade.py
cliper/app/: __init__.py  __main__.py  cache.py  captions.py  database.py  elasticsearch.py  episodes.py  importer.py  models.py  series.py  utils.py
cliper/app/parsers/: __init__.py  episode.py  seasons.py  series.py  utils.py  walker.py
cliper/app/subparser/: __init__.py  cleaner.py
front/: .eslintignore  .eslintrc  .prettierignore  package-lock.json  package.json  server.js
front/app/: api.ts  base.scss  caption.scss  colors.scss  colors.ts  root.jsx  root.tsx  text.scss
front/app/components/: Appbar.scss  Appbar.tsx  ClipList.scss  ClipList.tsx  Footer.tsx  card.scss  card.tsx  container.tsx  expandableCard.scss  expandableCard.tsx  index.ts
front/app/routes/: foo.tsx  index.jsx  index.tsx  series.tsx
front/app/routes/caption/: $episodeUUID.tsx  caption.scss
front/app/routes/foo/: $fooid.tsx  index.tsx
front/app/routes/series/: $seriesName.tsx  $seriesid.tsx
front/app/routes/series/$seriesName/: index.tsx  search.tsx
front/app/routes/series/$seriesid/: $episode.tsx
